# critica

./: README.md
backend/: Cargo.toml  aarch64-build.sh  aarch64-run.sh  loadcsv.py  run.sh
backend/sql/: 1-fake-journal-reader-schema.sql  2-mock-data.sql
backend/src/: api.rs  article_data_service.rs  db_types.rs  handlers.rs  main.rs  request.rs  response.rs
web-frontend/: package-lock.json  package.json
web-frontend/src/: App.tsx  setupProxy.js
web-frontend/src/components/: DashboardLayout.tsx  ExternalLayout.tsx
web-frontend/src/pages/: ArticleSearch.tsx  ArticleView.tsx  Dashboard.tsx  Home.tsx
web-frontend/src/utils/: api.ts
